<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/baby_blue"
    android:orientation="vertical"
    >

    <!-- <include
         android:id="@+id/toolbar_vital"
         layout="@layout/toolbar" />-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_extrabold"
                    android:text="@string/blood_pressure"
                    android:textColor="@color/main_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="05dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:maxLength="3"
                        android:background="@drawable/edittext_background"
                        android:id="@+id/edtSys"
                        style="@style/edit_text_style1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="05dp"
                        android:layout_weight=".25"
                        android:fontFamily="@font/opensans_regular"
                        
                        android:inputType="number"
                        android:textColorHint="@color/gray" />

                    <TextView
                        android:maxLength="3"
                        android:background="@drawable/edittext_background"
                        android:id="@+id/edtDia"
                        style="@style/edit_text_style1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="05dp"
                        android:layout_weight=".25"
                        android:fontFamily="@font/opensans_regular"
                       
                        android:inputType="number"
                        android:textColorHint="@color/gray" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="mm/Hg"
                        android:textColor="@color/main_color" />

                    <TextView
                        android:id="@+id/tvInterpretationBP"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".3"
                        android:textColor="@color/black"
                        android:fontFamily="@font/opensans_semibold"
                        android:gravity="center"
                         />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_extrabold"
                    android:text="@string/height"
                    android:textColor="@color/main_color" />

                <TextView
                    android:maxLength="3"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_background"
                    android:id="@+id/edtHeight"
                    style="@style/edit_text_style1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="05dp"
                    android:layout_weight=".4"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="number" />

                <TextView
                    style="@style/edit_text_style1"
                    android:id="@+id/spnHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:background="@drawable/edittext_background" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_extrabold"
                    android:text="@string/weight"
                    android:textColor="@color/main_color" />

                <TextView
                    android:maxLength="3"
                    android:background="@drawable/edittext_background"
                    android:id="@+id/edtWeight"
                   style="@style/edit_text_style1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="05dp"
                    android:layout_weight=".4"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="number" />

                <TextView
                    style="@style/edit_text_style1"

                    android:background="@drawable/edittext_background"
                    android:id="@+id/spnWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_extrabold"
                    android:text="@string/bmi"
                    android:textColor="@color/main_color" />

                <TextView
                    android:enabled="false"
                    android:maxLength="6"
                    android:background="@drawable/edittext_background"
                    android:id="@+id/edtBMI"
                   style="@style/edit_text_style1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="05dp"
                    android:layout_weight=".4"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="number" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvInterpretationBMI"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:hint="@string/interpretation" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_extrabold"
                    android:text="@string/pulse_rate"
                    android:textColor="@color/main_color" />

                <TextView
                    android:maxLength="3"

                    android:background="@drawable/edittext_background"
                    android:id="@+id/edtPr"
                   style="@style/edit_text_style1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="05dp"
                    android:layout_weight=".2"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="number" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="/minute"
                    android:textColor="@color/main_color" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvInterpretationPR"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".3"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:hint="@string/interpretation" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- <androidx.cardview.widget.CardView
         android:layout_width="130dp"
         android:id="@+id/btnSubmit"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:elevation="0dp"
         app:cardBackgroundColor="@color/main_color"
         app:cardCornerRadius="15dp"
         app:cardElevation="9dp">

         <TextView
             android:padding="10dp"
             android:textColor="@color/white"

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
             android:fontFamily="@font/opensans_semibold"
             android:text="@string/submit"
             android:textAllCaps="false" />
     </androidx.cardview.widget.CardView>-->

</LinearLayout>